# bin-monitor

api/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  diesel.toml  fly.toml
api/src/: db_models.rs  main.rs  schema.rs  utils.rs
api/src/actors/: fetch_bins_handler.rs  fetch_single_bin_handler.rs  mod.rs  update_bin_handler.rs
api/src/messages/: fetch_bins.rs  fetch_single_bin.rs  mod.rs  update_bin.rs
api/src/services/: fetch_bins.rs  fetch_single_bin.rs  mod.rs  update_bin.rs
detector/: detector.ino  detector.py  ssd1306.py
