[package]
name = "bin-monitor-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = "4.3.1"
rust_decimal ={ version = "1.29.1", features = ["serde-with-float", "db-diesel2-postgres"]}
chrono = {version = "0.4.24", features = ["serde"]}
diesel = {version = "2.0.3", features = ["postgres", "r2d2", "chrono", "numeric"]}
dotenv = "0.15.0"
serde = {version="1.0.159", features=["derive"]}
serde_json = { version = "1.0.95", features = ["arbitrary_precision"] }